# ClassicJems

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_plugins.sh
.github/workflows/: build.yml
src/: emulatorwindow.cpp  emulatorwindow.h  gamelibrarywidget.cpp  gamelibrarywidget.h  mainwindow.cpp  mainwindow.h
src/kde-plasmoid/: classicjems_qmlplugin.cpp  classicjems_qmlplugin.h  metadata.json
src/kde-plasmoid/contents/ui/: main.qml
src/lxqt-plugin/: classicjems.desktop.in  plugin-classicjems.cpp  plugin-classicjems.h
src/player/: main.cpp
src/xfce-plugin/: classicjems-xfce.desktop.in  xfce_plugin.c
